--- a/Asterius/Asterius.csproj
+++ b/Asterius/Asterius.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="1.2.2" />
     <PackageReference Include="NLog" Version="4.5.11" />
   </ItemGroup>
 
